# smartptf

./: .gitignore  README.MD  app.py  pyproject.toml
components/: MemorySession.py  StreamComponents.py
config/: logging_config.json  logging_config.py
models/: Forecasting.py  Load.py  Prediction.py  dpt.py
models/DPT/: AI.ipynb  AI_CLILearning.py  AI_humanTesting.ipynb  DptCls.py  __init__.py  gymEnv.py
models/DPT/ai-logs/TD3-1746968582/TD3_1/: events.out.tfevents.1746968596.Pepper-Plane.7732.0
models/DPT/ai-logs/TD3-1746977217/TD3_1/: events.out.tfevents.1746977322.Pepper-Plane.4640.0
models/DPT/ai-logs/TD3-1746978068/TD3_1/: events.out.tfevents.1746978077.Pepper-Plane.8124.0
models/DPT/ai-logs/TD3-1746979072/TD3_1/: events.out.tfevents.1746979090.Pepper-Plane.16888.0
models/DPT/ai-logs/TD3-1746979666/TD3_1/: events.out.tfevents.1746979678.Pepper-Plane.16048.0
smartptf/: Load.py  __main__.py  config.py  dpt.py  logging_config.py  utils.py
smartptf/DPT/: dpt.py
test/: test_Forecasting.py  test_Load.py  test_dpt.py  test_prediction.py  test_utils.py
test/data/: SP500_ohlcv_2020-03-10_to_2024-03-10.csv
utils/: polars.py  utils.py
views/: dpt.py  load.py  pageExport.py  pageForecasting.py  pageFourierAnalysis.py  pageImport.py  pageSolver.py
