[project]
name = "smartptf"
version = "0.1.0"
description = ""
authors = [
    {name = "Etienne",email = "etienne.larchet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.55,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "polars (>=1.26.0,<2.0.0)",
    "ruff[format] (>=0.11.5,<0.12.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
select = ["E", "F", "B", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
docstring-code-format = true
